--- a/coolstore-eap8/pom.xml
+++ b/coolstore-eap8/pom.xml
@@ -30,6 +30,42 @@
             <layout>default</layout>
         </repository>
     </repositories>
+       <pluginRepositories>
+        <!-- keep this repository the first -->
+        <pluginRepository>
+            <id>jboss-public-maven-repository</id>
+            <name>JBoss Public Maven Repository</name>
+            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>redhat-ga-maven-repository</id>
+            <name>Red Hat GA Maven Repository</name>
+            <url>https://maven.repository.redhat.com/ga/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>redhat-ea-maven-repository</id>
+            <name>Red Hat Early Access Maven Repository</name>
+            <url>https://maven.repository.redhat.com/earlyaccess/all/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
        <dependencyManagement>
 
         <dependencies>
@@ -122,7 +158,60 @@
             </plugin>
         </plugins>
     </build>
-    <profiles>
-<!-- TODO: Add OpenShift profile here -->
-    </profiles>
+<profiles>
+    <profile>
+        <id>openshift</id>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>3.3.2</version>
+                    <configuration>
+                        <warName>ROOT</warName>
+                        <failOnMissingWebXml>false</failOnMissingWebXml>
+                        </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.jboss.eap.plugins</groupId>
+                    <artifactId>eap-maven-plugin</artifactId>
+                    <version>1.0.0.Beta6-redhat-00001</version>
+                    <configuration>
+                        <channels>
+                            <channel>
+                                <groupId>org.jboss.eap.channels</groupId>
+                                <artifactId>eap-8.0-beta</artifactId>
+                            </channel>
+                        </channels>
+                        <feature-packs>
+                            <feature-pack>
+                                <location>org.jboss.eap:wildfly-ee-galleon-pack</location>
+                            </feature-pack>
+                            <feature-pack>
+                                <location>org.jboss.eap.cloud:eap-cloud-galleon-pack</location>
+                            </feature-pack>
+                            <feature-pack>
+                                <location>org.jboss.eap:eap-datasources-galleon-pack</location>
+                            </feature-pack>
+                        </feature-packs>
+                        <layers>
+                            <layer>cloud-server</layer>
+                            <layer>postgresql-datasource</layer>
+                            <layer>ejb</layer>
+                            <layer>web-clustering</layer>
+                        </layers>
+                        <filename>ROOT.war</filename>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>package</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
+</profiles>
 </project>
